# templeos-devkit

./: .gitignore  CLAUDE.md  Makefile  NOTES-A2.md  NOTES.md  README.md
holyc-parser/: Cargo.toml
holyc-parser/docs/: lex-spec.md  parse-spec.md
holyc-parser/src/: lib.rs
holyc-parser/src/diag/: mod.rs
holyc-parser/src/lex/: keyword.rs  mod.rs  scanner.rs  token.rs
holyc-parser/src/lint/: mod.rs
holyc-parser/src/parse/: ast.rs  decl.rs  expr.rs  mod.rs  parser.rs  stmt.rs  type_.rs
holyc-parser/src/preproc/: mod.rs
holyc-parser/src/symbol/: builtins.rs  mod.rs  resolver.rs
holyc-parser/src/types/: mod.rs
holyc-parser/tests/: cli_integration.rs  corpus_smoke.rs  diag_smoke.rs  lex_tokens.rs  lint_quirk_rules.rs  migrated_rules.rs  parse_decl.rs  parse_expr.rs  parse_preproc.rs  parse_stmt.rs  parse_type.rs  symbol_resolver.rs
holyc-parser/tests/corpus/: README.md  surprises.md
holyc-parser/tests/corpus/failing/: 000-surprises-surprise-for-decl-fnscope.hc  000-surprises-surprise-for-decl-fnscope.hc.expected  001-bug-compat-bug51-toplevel-return.hc.expected  002-bug-compat-bug51-toplevel-label.hc  002-bug-compat-bug51-toplevel-label.hc.expected  003-bug-compat-bug54-for-decl-filescope.hc  003-bug-compat-bug54-for-decl-filescope.hc.expected  004-bug-compat-bug55-dowhile-missing-semi.hc  004-bug-compat-bug55-dowhile-missing-semi.hc.expected  005-bug-compat-bug56-nested-typecast.hc  005-bug-compat-bug56-nested-typecast.hc.expected  006-bug-compat-bug59-c-style-cast.hc  006-bug-compat-bug59-c-style-cast.hc.expected  007-bug-compat-bug52-continue-keyword.hc  (+34 more)
(+232 files in other folders)
